@@ -340,9 +340,9 @@
 
   </section>
 
-  &design-lm.xml;
   &design-td.xml;
   &design-probe.xml;
+  &design-lm.xml;
 
   <section><title>Remaining Modules</title>
 
